--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,27 +73,6 @@
   }
 } */
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -105,4 +84,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: "Lato", sans-serif;
+  background-color: #fcf9f9;
 }
+
+/* a {
+  color: inherit;
+  text-decoration: none;
+} */
+
+/* @media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+} */
